# clio

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  dashboard.yml  release.yml  test.yml
clio/: __main__.py  _llm_validation.py  cli.py  diagnostics.py  graph_render.py  keywords.py  nl_to_clio.py  skill_to_clio.py
clio/emitters/: _claude_cli_helpers.py  _claude_skill_helpers.py  _go_flow_renderer.py  _go_helpers.py  _go_runtime_templates.py  _go_step_renderers.py  _langgraph_helpers.py  _mcp_helpers.py  _python_helpers.py  _shared_utils.py  _sidecar.py  _swift_flow_renderer.py  _swift_helpers.py  _swift_runtime_templates.py  _swift_step_renderers.py  _workflow_errors.py  _workflow_expressions.py  _workflow_flow_renderer.py  _workflow_helpers.py  _workflow_loops.py  _workflow_step_renderers.py  _workflow_subflows.py  base.py  claude_cli.py  claude_skill.py  go.py  langgraph.py  mcp_server.py  python.py  swift.py  workflow.py
clio/ir/: builder.py  contracts.py  graph.py  resolver.py  types.py
clio/parser/: ast_nodes.py  expressions.py  lexer.py  parser.py  tokens.py
clio/prompts/: __init__.py  nl_to_clio_retry.md  nl_to_clio_system.md  skill_to_clio_retry.md  skill_to_clio_system.md
clio/runtime/: logging.py  mcp_client.py  rest.py  sql.py
docs/: ARCHITECTURE.md  COMPARISON_OPENPROSE.md  COMPILATION_TARGETS.md  LANGUAGE_SPEC.md  POSITIONING.md  audit-drift-2026-06-02.md  audit-specs-2026-06-04.md  clio-spec.md  refonte-honesty-plan-2026-06-04.md  refonte-honesty-scope-2026-06-04.md
docs/articles/: linkedin-fr.md
docs/manual/: 01-getting-started.md  README.md  (+6 more)
examples/: README.md  article.txt  classify_corpus.clio  critical_pipeline.clio  critical_pipeline_resume.clio  customers.csv  entities.clio  faq.json  faq.txt  feedback.json  feedback_routing.clio  flow_composition.clio  flow_signature.clio  mcp_tool.clio  mvp.clio  mvp_go.clio  parallel_classify.clio  parallel_review.clio  question.txt  rag_basic.clio  rag_selfcontained.clio  rest_advanced.clio  skill_minimal.clio  sql_demo.clio  ticket_routing.clio  tickets.json
examples/projects/01-iterative-refiner/expected_output/: README.md  pyproject.toml
examples/projects/01-iterative-refiner/expected_output/iterative_refiner/: __main__.py  contracts.py  flow.py
examples/projects/01-iterative-refiner/expected_output/iterative_refiner/clio_runtime/: logging.py
examples/projects/01-iterative-refiner/expected_output/iterative_refiner/steps/: draft_summary.py  finalize.py  judge_summary.py  load_article.py  refine_summary.py
examples/projects/01-iterative-refiner/expected_output/tests/: test_refine_loop_terminates_with_known_article.py
mockups/: index.html  open_session.html  open_session_failing.html  open_session_first.html  style.css
tests/: conftest.py  test_cache.py  test_cli.py  test_cli_import.py  test_diagnostics.py  test_docs_go_matrix.py  test_doctor_migrate.py  test_e2e.py  test_e2e_examples.py  test_e2e_logging.py  test_e2e_parallel.py  test_e2e_python.py  test_e2e_resume.py  test_examples.py  test_expressions.py  test_graph_render.py  test_if_block.py  test_ir.py  test_ir_multifile.py  test_lexer.py  test_match_block.py  test_nl_to_clio.py  test_parser.py  test_parser_imports.py  test_parser_visibility.py  test_prompts_loader.py  test_rescue_block.py  test_resolver.py  test_runtime.py  test_runtime_logging.py  test_runtime_mcp_client.py  test_runtime_rest.py  test_runtime_sql.py  test_sidecar.py  test_skill_to_clio.py  test_skill_to_clio_e2e.py  test_while_block.py
tests/fixtures/expected/python_v03_mvp/: README.md  pyproject.toml
tests/fixtures/expected/python_v03_mvp/customer_retention/: __main__.py  flow.py
tests/fixtures/expected/python_v03_mvp/customer_retention/steps/: detect_churn.py  detect_churn_naive.py
tests/fixtures/expected/shell_parse_json/: README.md  pyproject.toml
tests/fixtures/expected/shell_parse_json/shell_parse_pipe/: __main__.py  contracts.py  flow.py
tests/fixtures/expected/shell_parse_json/shell_parse_pipe/steps/: load_corpus.py
tests/fixtures/expected/v03_contracts/: pyproject.toml
tests/fixtures/expected/v03_contracts/retention/: __main__.py  contracts.py  flow.py
tests/fixtures/expected/v03_contracts/retention/steps/: detect_churn.py  load_customers.py
tests/fixtures/expected/v03_skeleton/: README.md  pyproject.toml
tests/fixtures/expected/v03_skeleton/classify/: __main__.py  flow.py
tests/fixtures/expected/v03_skeleton/classify/steps/: detect_topic.py
(+249 files in other folders)
