[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clio"
version = "0.3.0"
description = "CLIO Compiler — Compiled Language for Intent Orchestration"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.18",
    "referencing>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
clio = "clio.cli:main"

[tool.setuptools.packages.find]
include = ["clio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
