[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clio"
version = "0.18.2"
description = "CLIO Compiler — Compiled Language for Intent Orchestration"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Jean-Paul Gavini" }]
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.18",
    "referencing>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "anthropic>=0.40",
    "requests>=2.31",
    "ruff>=0.6",
    "mypy>=1.10",
]
gen = ["anthropic>=0.40"]

[project.scripts]
clio = "clio.cli:main"

[tool.setuptools.packages.find]
include = ["clio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["tests/fixtures/expected", "examples/projects/*/expected_output"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["RUF043", "B017", "F841", "E501"]

[tool.mypy]
python_version = "3.12"
files = ["clio"]
ignore_missing_imports = true
