[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "shell_parse_pipe"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [

]

[project.scripts]
shell_parse_pipe = "shell_parse_pipe.__main__:main"

[tool.setuptools.packages.find]
include = ["shell_parse_pipe*"]
