[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "retention"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2",
]

[project.scripts]
retention = "retention.__main__:main"

[tool.setuptools.packages.find]
include = ["retention*"]
