[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "classify"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
]

[project.scripts]
classify = "classify.__main__:main"

[tool.setuptools.packages.find]
include = ["classify*"]
